fixed wrapping

--- a/react-app/src/components/AppUI/Content/Content.css
+++ b/react-app/src/components/AppUI/Content/Content.css
@@ -113,7 +113,7 @@
 	box-sizing: border-box;
 	font-size: 16px;
 	margin: 0;
-	overflow-x: break-word;
+	word-break: break-all;
 	width: 100%;
 }
 
